[package]
name = "inventory_management"
version = "3.0.0"
authors = ["abhijit-paul <abhijit.paul9900@gmail.com>"]
edition = "2018"


[dependencies]
futures = { version = "0.3.*" }
tokio = { version = "1.16.1", features = ["macros"] }
warp = "0.3.2"
stackdriver_logger = "0.8.0"
config = "0.9.3"
log = "0.4.14"
url = "2.2.2"
reqwest = { version = "0.11.9", features = ["json"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0.41"
bytes = "1.1.0"
serde_dynamodb = "0.9.0"
maplit = "1.0.1"
rusoto_dynamodb = { version = "0.47.0", default_features = false, features = ["rustls"] }
rusoto_core = { version = "0.47.0", default_features = false, features = ["rustls"] }
base64 = "0.13.0"
lazy_static = "1.3.0"
chrono = { version = "0.4.7", features = ["serde"] }
avro-rs = "0.13.0"
kafka = "0.8.0"
stripe-rust = "0.10"
schema_registry_converter = "1.1.0"
time = "0.1.42"
string_template = "0.2.1"

[dev-dependencies]
criterion = "0.2"

[features]
stripe_tests = []
dev_tests = []

[profile.dev]
opt-level = 0
debug = true
lto = false
debug-assertions = true
codegen-units = 16
incremental = true
overflow-checks = true

[profile.release]
opt-level = 's'
debug = false
rpath = false
lto = true
debug-assertions = false
codegen-units = 1
incremental = false
overflow-checks = true


[profile.bench]
opt-level = 3
debug = false
rpath = false
lto = false
debug-assertions = false
codegen-units = 1
incremental = false
overflow-checks = false
